# utility

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  docker-compose.yml  httpd.conf
.github/workflows/: doxygen.yml
docs/: annotated.html  annotated_dup.js  classes.html  dir_3a4d35156996fb70540e167b84a39bd1.html  dir_3a4d35156996fb70540e167b84a39bd1.js  dir_6fda8cda8f49648c0c93b7c9e4ca66da.html  dir_6fda8cda8f49648c0c93b7c9e4ca66da.js  dir_76ede76ced786ebda89a0eb1ff3c4d84.html  dir_76ede76ced786ebda89a0eb1ff3c4d84.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  examples.html  examples.js  files.html  functions.html  functions_enum.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  inherit_graph_15.md5  inherit_graph_16.map  inherit_graph_16.md5  inherit_graph_17.map  (+27 more)
docs/d0/d68/: classUtility_1_1Ini.html  classUtility_1_1Ini.js
docs/d0/d8d/: date__time_8hpp__incl.map  date__time_8hpp__incl.md5
docs/d0/dc4/: process__timer_8hpp__incl.map  process__timer_8hpp__incl.md5
docs/d1/d71/: data__frame_8hpp.html  data__frame_8hpp_source.html
docs/d1/d84/: classUtility_1_1DateTime.html  classUtility_1_1DateTime.js
docs/d1/de5/: process__timer_8hpp.html  process__timer_8hpp_source.html
docs/d1/df6/: shared__memory_8hpp__incl.map  shared__memory_8hpp__incl.md5
docs/d2/da1/: classUtility_1_1Logger-members.html
docs/d4/d0c/: classTDateTime-members.html
docs/d4/d25/: System_8hpp_source.html
docs/d4/dc0/: classTPath.html  classTPath.js
docs/d4/dda/: classUtility_1_1ProcessTimer.html  classUtility_1_1ProcessTimer.js
docs/d4/df2/: structNotImplementedExeption.html  structNotImplementedExeption.js
docs/d5/d05/: structNotImplementedExeption__coll__graph.map  structNotImplementedExeption__coll__graph.md5
docs/d5/d64/: classTZipFile.html  classTZipFile.js
docs/d5/d68/: classTZipFile__inherit__graph.md5
docs/d5/d7c/: classUtility_1_1Enumerate-members.html
docs/d5/d9a/: classUtility_1_1DataFrame-members.html
docs/d6/d1e/: classUtility_1_1Ini-members.html
docs/d6/d69/: classTThread-members.html
docs/d6/da3/: logger_8hpp.html  logger_8hpp_source.html
docs/d6/db0/: classAnsiString-members.html
docs/d7/da6/: classUtility_1_1DataFrame.html  classUtility_1_1DataFrame.js
docs/d7/dac/: classUtility_1_1UdpSocket.html  classUtility_1_1UdpSocket.js
docs/d7/daf/: core_8hpp__incl.map  core_8hpp__incl.md5
docs/d7/dd6/: classTZipFile-members.html
docs/d7/dea/: classUtility_1_1DateTime-members.html
docs/d7/dfd/: ini_8hpp.html  ini_8hpp_source.html
docs/d8/d9a/: classTStringDynArray.html  classTStringDynArray.js
docs/d8/df3/: date__time_8hpp.html  date__time_8hpp_source.html
docs/d9/d30/: test_2utility_2shared_memory_2test_shared_memory_2_8cpp-example.html
docs/d9/d5b/: structNotImplementedExeption-members.html
docs/d9/dad/: shared__memory_8hpp.html  shared__memory_8hpp_source.html
docs/d9/dcc/: classUtility_1_1UdpSocket-members.html
docs/da/d1f/: namespaceUtility.html  namespaceUtility.js
docs/da/d47/: core_8hpp.html  core_8hpp.js  core_8hpp_source.html
docs/da/dce/: classTThread.html
docs/da/dd7/: ini_8hpp__incl.map  ini_8hpp__incl.md5
docs/db/d40/: structNotImplementedExeption__inherit__graph.map
docs/db/d55/: classTPath-members.html
docs/dc/d65/: data__frame_8hpp__incl.map  data__frame_8hpp__incl.md5
docs/dc/d75/: classTFileStream-members.html
docs/dc/d97/: classTFileStream.html  classTFileStream.js
docs/dc/db0/: test_2utility_2ini_2test_ini_8cpp-example.html
docs/dc/dea/: classTDateTime.html  classTDateTime.js
docs/dc/df6/: classTZipFile__coll__graph.map
docs/dd/d0a/: classAnsiString.html  classAnsiString.js
docs/latex/: annotated.tex  examples.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+24 more)
include/: angle.hpp  date_time.hpp  enumerate.hpp  logger.hpp
include/builder_alternative/: System.hpp
include/utility/: core.hpp  date_time.hpp  ini.hpp  logger.hpp  process_timer.hpp  shared_memory.hpp  tcp_socket.hpp  udp_socket.hpp
src/utility/: CMakeLists.txt  date_time.cpp  ini.cpp  process_timer.cpp  shared_memory.cpp
src/utility/pythonian/: CMakeLists.txt  data_frame.cpp
test/utility/: CMakeLists.txt  date_time.cpp  process_timer.cpp  shared_memory.cpp
test/utility/date_time/: CMakeLists.txt  test_date_time.cpp
test/utility/ini/: CMakeLists.txt  README.md  test_ini.cpp
test/utility/process_timer/: CMakeLists.txt  test_process_timer.cpp
test/utility/pythonian/: CMakeLists.txt
test/utility/pythonian/data_frame/: CMakeLists.txt  README.md  test_data_frame.cpp
test/utility/pythonian/enumerate/: CMakeLists.txt  test_enumerate.cpp
test/utility/shared_memory/: CMakeLists.txt  read.cpp  sample_data.hpp  test_shared_memory_1.cpp  test_shared_memory_2.cpp  write.cpp
test/utility/udp_socket/: recv1.cpp  recv2.cpp  sample_data.hpp  send.cpp
(+69 files in other folders)
